Reworked tile drawing.

--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.html
@@ -1,2 +1,46 @@
 <svg width="100%" height="80vh">
+  <defs>
+    <pattern id="floor" width="30" height="30">
+      <image width="30" height="30" href="/assets/castle/Floor.png"></image>
+    </pattern>
+
+    <pattern id="wall-left" width="5" height="5" patternUnits="userSpaceOnUse">
+      <image width="5" height="5" href="/assets/castle/Left.png"></image>
+    </pattern>
+    <pattern id="wall-right" width="5" height="5" patternUnits="userSpaceOnUse">
+      <image width="5" height="5" href="/assets/castle/Right.png"></image>
+    </pattern>
+    <pattern id="wall-top" width="5" height="5" patternUnits="userSpaceOnUse">
+      <image width="5" height="5" href="/assets/castle/Top.png"></image>
+    </pattern>
+    <pattern id="wall-bottom" width="5" height="5" patternUnits="userSpaceOnUse">
+      <image width="5" height="5" href="/assets/castle/Bottom.png"></image>
+    </pattern>
+
+    <pattern id="wall-corner-inner-left-bottom" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/InnerCornerLeftBottom.png"></image>
+    </pattern>
+    <pattern id="wall-corner-inner-right-bottom" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/InnerCornerRightBottom.png"></image>
+    </pattern>
+    <pattern id="wall-corner-inner-left-top" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/InnerCornerLeftTop.png"></image>
+    </pattern>
+    <pattern id="wall-corner-inner-right-top" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/InnerCornerRightTop.png"></image>
+    </pattern>
+
+    <pattern id="wall-corner-outer-left-bottom" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/OuterCornerLeftBottom.png"></image>
+    </pattern>
+    <pattern id="wall-corner-outer-right-bottom" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/OuterCornerRightBottom.png"></image>
+    </pattern>
+    <pattern id="wall-corner-outer-left-top" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/OuterCornerLeftTop.png"></image>
+    </pattern>
+    <pattern id="wall-corner-outer-right-top" width="5" height="5">
+      <image width="5" height="5" href="/assets/castle/OuterCornerRightTop.png"></image>
+    </pattern>
+  </defs>
 </svg>
