--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.html
@@ -43,4 +43,6 @@
       <image width="5" height="5" href="/assets/castle/OuterCornerRightTop.png"></image>
     </pattern>
   </defs>
+  <g class="world"></g>
+  <g class="characters"></g>
 </svg>
