--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.scss
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.scss
@@ -1,3 +1,9 @@
 svg {
     background-color: black;
 }
+
+.character {
+    transition-property: x, y;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-out;
+}
