--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<svg width="100%" height="80vh">
+<svg>
   <defs>
     <pattern id="floor" width="30" height="30">
       <image width="30" height="30" href="/assets/castle/Floor.png"></image>
