--- a/src/MAZE.Web/ClientApp/src/app/game-with-control/game-with-control.component.scss
+++ b/src/MAZE.Web/ClientApp/src/app/game-with-control/game-with-control.component.scss
@@ -1,6 +1,6 @@
 .game-with-controls {
-    width: 100%;
-    height: calc(100vh - 75px);
+    width: 100vw;
+    height: 100vh;
     display: flex;
 
     .controls {
