Fixed slowdown issue.

--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <svg>
   <defs>
-    <pattern id="floor" width="30" height="30">
+    <pattern id="floor" width="30" height="30" patternUnits="userSpaceOnUse">
       <image width="30" height="30" href="/assets/castle/Floor.png"></image>
     </pattern>
 
