--- a/src/MAZE.Web/ClientApp/src/app/game-control/game-control.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game-control/game-control.component.html
@@ -2,7 +2,7 @@
   <div class="action-control" [ngClass]="actionControl.action" *ngFor="let actionControl of getActionControls()">
     <div class="character-control" *ngFor="let characterControl of getCharacterControls(actionControl)">
       <span class="action-name" [ngClass]="characterControl.characterClass">{{characterControl.characterClass}} {{actionControl.action}}:</span>
-      <button type="button" *ngFor="let locationId of getLocationIds(characterControl); index as i;" [disabled]="locationId == null || !actionCanBeUsed" (click)="move(characterControl.characterId, locationId)">{{ i + 1}} step{{i > 0 ? 's' : ''}}</button>
+      <button type="button" *ngFor="let locationId of getLocationIds(characterControl); index as i;" [disabled]="locationId == null || !actionsCanBeUsed()" (click)="move(characterControl.characterId, locationId)">{{ i + 1}} step{{i > 0 ? 's' : ''}}</button>
     </div>
   </div>
 </div>
