--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.scss
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.scss
@@ -1,3 +1,27 @@
+.game-view {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.join-game {
+    width: 1em;
+    height: 1em;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0.5;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-out;
+    transition-property: opacity, width, height;
+}
+
+.join-game:hover {
+    opacity: 1;
+    width: 20em;
+    height: 20em;
+}
+
 svg {
     background-color: black;
     width: 100%;
@@ -7,5 +31,5 @@ svg {
 .character {
     transition-property: x, y;
     transition-duration: 0.5s;
-    transition-timing-function: ease-out;
+    transition-timing-function: ease-in-out;
 }
