--- a/src/MAZE.Web/ClientApp/src/app/game-control/game-control.component.scss
+++ b/src/MAZE.Web/ClientApp/src/app/game-control/game-control.component.scss
@@ -1,15 +1,16 @@
-.action-controls {
+.actions {
     width: 100%;
     height: 100%;
 }
 
-.action-control {
+.action {
   display: flex;
+  margin-bottom: 3em;
 
-  &.west {
+  &.move-west {
     flex-direction: column;
 
-    .character-control {
+    .character {
       width: 100%;
       flex-direction: row-reverse;
 
@@ -23,10 +24,10 @@
     }
   }
 
-  &.east {
+  &.move-east {
     flex-direction: column;
 
-    .character-control {
+    .character {
       width: 100%;
 
       > * {
@@ -39,10 +40,10 @@
     }
   }
 
-  &.north {
+  &.move-north {
     flex-direction: row;
 
-    .character-control {
+    .character {
       flex: 1;
       flex-direction: column-reverse;
     }
@@ -52,11 +53,11 @@
     }
   }
 
-  &.south {
+  &.move-south {
     flex-direction: row;
     flex: 1;
 
-    .character-control {
+    .character {
       flex: 1;
       flex-direction: column;
     }
@@ -65,9 +66,23 @@
       content: 'ᐁ';
     }
   }
+
+  &.use-portal {
+    flex-direction: row;
+    flex: 1;
+
+    .character {
+      flex: 1;
+      flex-direction: column;
+    }
+
+    button {
+      font-size: 15px;
+    }
+  }
 }
 
-.character-control {
+.character {
   display: flex;
 
   > * {
