--- a/src/MAZE.Web/ClientApp/src/app/game-control/game-control.component.scss
+++ b/src/MAZE.Web/ClientApp/src/app/game-control/game-control.component.scss
@@ -6,6 +6,23 @@
 .action {
   display: flex;
   margin-bottom: 3em;
+  flex-direction: row;
+  flex: 1;
+
+  .character {
+    flex: 1;
+    flex-direction: column;
+  }
+
+  button {
+    font-size: 15px;
+  }
+
+  &.move-west, &.move-east, &.move-north, &.move-south {
+    button {
+      font-size: 0;
+    }
+  }
 
   &.move-west {
     flex-direction: column;
@@ -29,6 +46,7 @@
 
     .character {
       width: 100%;
+      flex-direction: row;
 
       > * {
         width: 20%;
@@ -64,20 +82,6 @@
 
     button::after {
       content: 'ᐁ';
-    }
-  }
-
-  &.use-portal {
-    flex-direction: row;
-    flex: 1;
-
-    .character {
-      flex: 1;
-      flex-direction: column;
-    }
-
-    button {
-      font-size: 15px;
     }
   }
 }
