Reworked game view to support transitions when exploring world. Fixed initial join exception due to unapplied join event.

--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.html
@@ -44,8 +44,10 @@
         <image width="5" height="5" href="/assets/castle/OuterCornerRightTop.png"></image>
       </pattern>
     </defs>
-    <g class="world"></g>
-    <g class="characters"></g>
+    <g class="game">
+      <g class="world"></g>
+      <g class="characters"></g>
+    </g>
   </svg>
   <img class="join-game" [src]="joinGameQrUrl" />
 </div>
