--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.scss
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.scss
@@ -2,6 +2,12 @@
     position: relative;
     width: 100%;
     height: 100%;
+
+    .game {
+        transition-duration: 2s;
+        transition-timing-function: ease-out;
+        transition-property: transform;
+    }
 }
 
 .join-game {
