Added a max player limit. Added player name list.

--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.html
@@ -49,5 +49,6 @@
       <g class="characters"></g>
     </g>
   </svg>
+  <div class="players"></div>
   <img class="join-game" [src]="joinGameQrUrl" />
 </div>
