Added draw logic and simple graphics for obstacles.

--- a/src/MAZE.Web/ClientApp/src/app/game/game.component.html
+++ b/src/MAZE.Web/ClientApp/src/app/game/game.component.html
@@ -43,6 +43,19 @@
       <pattern id="wall-corner-outer-right-top" width="5" height="5">
         <image width="5" height="5" href="/assets/castle/OuterCornerRightTop.png"></image>
       </pattern>
+
+      <pattern id="force-wall" width="5" height="5" patternUnits="userSpaceOnUse">
+        <image width="5" height="5" href="/assets/ForceWall.svg"></image>
+      </pattern>
+      <pattern id="lock" width="5" height="5" patternUnits="userSpaceOnUse">
+        <image width="5" height="5" href="/assets/Lock.svg"></image>
+      </pattern>
+      <pattern id="stone" width="5" height="5" patternUnits="userSpaceOnUse">
+        <image width="5" height="5" href="/assets/Stone.svg"></image>
+      </pattern>
+      <pattern id="spirits" width="5" height="5" patternUnits="userSpaceOnUse">
+        <image width="5" height="5" href="/assets/Spirits.svg"></image>
+      </pattern>
     </defs>
     <g class="game">
       <g class="world"></g>
